--- a/tasks/suid_sgid.yml
+++ b/tasks/suid_sgid.yml
@@ -12,6 +12,8 @@
 
 - name: find binaries with suid/sgid set | os-06
   shell: find / -xdev \( -perm -4000 -o -perm -2000 \) -type f ! -path '/proc/*' -print 2>/dev/null
+  args:
+    executable: /bin/sh
   register: sbit_binaries
   when: os_security_suid_sgid_remove_from_unknown
   changed_when: False
